[package]
name = "heaven"
version = "0.1.0"
authors = ["Jess Bees <hi@toomanybees.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
reqwest = "0.9.22"
oauthcli = "1.0"
url = "1.7"
dotenv = "0.15"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
