[package]
name = "heaven"
version = "0.1.0"
authors = ["Jess Bees <hi@toomanybees.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
surf = "1.0"
oauthcli = "1.0"
url = "1.7"
dotenv = "0.15"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
